--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -30,6 +30,7 @@
                         <li><a href="@Url.Action("List", "News")">Почитать новости</a></li>
                         <li><a href="@Url.Action("List", "Articles")">Почитать статьи</a></li>
                         <li><a href="@Url.Action("List", "Aphorisms")">Кратко о главном</a></li>
+                        <li><a href="@Url.Action("List", "YoutubeVideos")">Топ видео Youtube</a></li>
                         <li><a href="@Url.Action("Edit", "SiteQuestions")">Обратная связь</a></li>
                         @if (User.Identity.IsAuthenticated)
                         {
