--- a/GE.WebUI/less/yt-videos.less
+++ b/GE.WebUI/less/yt-videos.less
@@ -1,5 +1,6 @@
 ﻿@import (reference) "sizes.less";
 @import (reference) "colors.less";
+@import (reference) "../bower_components/bootstrap/less/variables.less";
 
 .yt-videos-list{
     margin-top:@def-pad*2;
@@ -20,14 +21,47 @@
 .humor-yt-item{
     margin-top:@def-pad*3;
 }
+
+@humor-yt-item__video--h:150px;
+
 .humor-yt-item__video{
     position:relative;
-    height:150px;
+    height:@humor-yt-item__video--h;
     margin-bottom:@def-pad;
+    
+    @media (max-width: @screen-xs-max) {
+        height:@humor-yt-item__video--h*2;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+    }
 }
 .humor-yt-item__title{
     margin:0;
     font-size:120%;
     font-weight:700;
     margin-bottom:@def-pad;
+}
+
+.humor-yt-item__banner{
+    margin-top:@def-pad*2;
+    height:@humor-yt-item__video--h;
+    overflow:hidden;
+}
+
+//yt-archive
+#yt-archive ul{
+    list-style:none;
+    margin:0;
+    color:@color-white;
+}
+
+#yt-archive a{
+    color:inherit;
 }
