--- a/GE.WebUI/less/aphorisms.less
+++ b/GE.WebUI/less/aphorisms.less
@@ -94,6 +94,23 @@
     }
 }
 
+.aphorism .aph-html > .foreword .share-buttons > li:first-child{
+    margin-left:0;
+    @media (max-width: @screen-xs-max) {
+        margin-left:@def-pad;
+    }
+
+    @media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
+    }
+
+    @media (min-width: @screen-md-min) and (max-width: @screen-md-max) {
+    }
+
+    @media (min-width: @screen-lg-min) {
+        
+    }
+}
+
 .aphorism .aph-html > .foreword .btn {
     margin-top: @def-pad;
     @media (max-width: @screen-xs-max) {
