--- a/GE.WebUI/Views/Shared/_Layout.cshtml
+++ b/GE.WebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     SxVMBanner banner = null;
 }
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head itemscope itemtype="http://schema.org/WebSite">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
