--- a/GE.WebUI/Views/Employees/List.cshtml
+++ b/GE.WebUI/Views/Employees/List.cshtml
@@ -1,21 +1,21 @@
-﻿@model SxVMEmployee[]
+﻿@model  SxExtantions.SxPagedCollection<SxVMEmployee>
 @{
     ViewBag.Title = ViewBag.Title ?? "Контакты";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
     ViewBag.H1CssClass = "hidden";
     ViewBag.Description = ViewBag.Description ?? "Контакты руководства и сотрудников сайта";
     ViewBag.Keywords = ViewBag.Keywords ?? "Контакты руководства game-exe.com, Контакты сотрудников game-exe.com";
-    SxVMEmployee item;
 }
 
 <div class="identity-page employees">
     <h2 class="header">@ViewBag.Title</h2>
 
-    @if(Model.Any())
+    @if (Model.Collection.Any())
     {
-        for (int i = 0; i < Model.Length; i++)
+        SxVMEmployee item = null;
+        for (int i = 0; i < Model.Collection.Length; i++)
         {
-            item = Model[i];
+            item = Model.Collection[i];
             <div class="employee">
                 <div class="row">
                     <div class="col-md-3">
@@ -36,5 +36,5 @@
         }
     }
 </div>
-    
+
 
