--- a/GE.WebUI/less/share-buttons.less
+++ b/GE.WebUI/less/share-buttons.less
@@ -65,6 +65,7 @@
     text-align: center;
     box-shadow: 1px 1px 8px rgba(255,255,255,.5);
     padding-top:1px;
+    color:@color-black;
 }
 
 .share-buttons__icon::after {
