--- a/GE.WebUI/Views/Articles/DisplayTemplates/VMMaterial.cshtml
+++ b/GE.WebUI/Views/Articles/DisplayTemplates/VMMaterial.cshtml
@@ -21,7 +21,7 @@
     {
         var video = Model.Videos.First();
         <div class="list-video">
-            @Html.SxVideo(video, SX.WebCore.Providers.SxVideoProvider.VideoQuality.Medium)
+            @Html.SxVideo(video, SX.WebCore.SxProviders.SxVideoProvider.VideoQuality.Medium)
         </div>
     }
 
