--- a/GE.WebUI/Views/YoutubeVideos/_PopularForHumor.cshtml
+++ b/GE.WebUI/Views/YoutubeVideos/_PopularForHumor.cshtml
@@ -10,7 +10,7 @@
         <div class="humor-yt-item">
 
             <div class="humor-yt-item__video">
-                @Html.SxVideo(item, SX.WebCore.Providers.SxVideoProvider.VideoQuality.Medium)
+                @Html.SxVideo(item, SX.WebCore.SxProviders.SxVideoProvider.VideoQuality.Medium)
             </div>
 
             <h3 class="humor-yt-item__title">@item.Title</h3>
