--- a/GE.WebUI/Views/Videos/_VideoInList.cshtml
+++ b/GE.WebUI/Views/Videos/_VideoInList.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="list-video">
-    <figure style="background-image:url(@SX.WebCore.Providers.SxVideoProvider.GetVideoImageUrl(Model.VideoId, SX.WebCore.Providers.SxVideoProvider.VideoQuality.Medium)">
+    <figure style="background-image:url(@SX.WebCore.SxProviders.SxVideoProvider.GetVideoImageUrl(Model.VideoId, SX.WebCore.SxProviders.SxVideoProvider.VideoQuality.Medium)">
         <div class="l-v-wr">
             <a href="javascript:void(0)">
                 <i class="fa fa-youtube-play"></i>
