--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -18,11 +18,11 @@
     SxVMBanner banner;
 }
 
-@Html.Action("LastMaterialsBlock", "Articles", new {
+@*@Html.Action("LastMaterialsBlock", "Articles", new {
     bh="Последние статьи"
-})
+})*@
 
-@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })
+@*@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })*@
 
 @*@Html.Action("NewsCategories", new { controller = "News", lnc = 5 })*@
 
@@ -31,7 +31,7 @@
 </div>*@
 
 @{
-    banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
+    @*banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
     if (banner != null)
     {
         if (!(Equals(banner.Type, SxBanner.BannerType.Google) && Request.IsLocal) || Equals(banner.Type, SxBanner.BannerType.Html))
@@ -40,14 +40,14 @@
                 @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
             </div>
         }
-    }
+    }*@
 }
 
-@*<section>
+<section>
     @Html.Action("RandomList", "SiteTests")
 </section>
 
-@Html.Action("ForGamersBlock", "Articles")*@
+@Html.Action("ForGamersBlock", "Articles")
 
 @section scripts{
     <script type="text/javascript" src="~/Content/dist/js/ge-last-news-block.min.js"></script>
