--- a/GE.WebUI/Views/Shared/_NavBar.cshtml
+++ b/GE.WebUI/Views/Shared/_NavBar.cshtml
@@ -51,7 +51,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="@Url.Action("List", "SiteTests")">Тесты</a></li>
                         <li><a href="@Url.Action("List", "Humor")">Юмор</a></li>
-                        <li><a href="@Url.Action("List", "Articles", new { cat="populiarnoe"})">Популярное</a></li>
+                        @*<li><a href="@Url.Action("List", "Articles", new { cat="populiarnoe"})">Популярное</a></li>*@
                     </ul>
                 </li>
                 <li><a href="@Url.Action("Index", "ForAuthors")">Авторам</a></li>
