--- a/GE.WebUI/Views/Account/ForgotPassword.cshtml
+++ b/GE.WebUI/Views/Account/ForgotPassword.cshtml
@@ -1,29 +1,35 @@
-﻿@model WebApplication1.Models.ForgotPasswordViewModel
+﻿@model SxVMForgotPassword
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Забыли пароль?";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Enter your email.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Email Link" />
-        </div>
-    </div>
+@section head{
+    <meta name="robots" content="noindex" />
 }
+
+<div class="identity-page login">
+    <div class="wrapper">
+        <section id="loginForm">
+            <h2>@ViewBag.Title</h2>
+            @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "transparent", role = "form" }))
+            {
+                @Html.AntiForgeryToken()
+                <p class="text-muted">Введите адрес электронной почты, указанный при регистрации. На этот адрес будут высланы дальнейшие инструкции по восстановлению пароля.</p>
+
+                <div class="form-group">
+                    @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(x=>x.Email)
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" class="btn btn-transparent white" value="Получить инструкции" />
+                </div>
+            }
+        </section>
+    </div>
+</div>
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+    <script src="@Url.Action("Js", "StaticContent", new { name="jquery.validate", area=""})"></script>
+    <script src="@Url.Action("Js", "StaticContent", new { name = "jquery.validate.unobtrusive" })"></script>
 }
