--- a/GE.WebUI/Views/Account/Login.cshtml
+++ b/GE.WebUI/Views/Account/Login.cshtml
@@ -45,7 +45,8 @@
                             </div>
                         </div>
                         <p>
-                            <a href="@Url.Action("Register","Account")" class="text-muted">Регистрация нового аккаунта</a>
+                            <a href="@Url.Action("Register","Account")" class="text-muted" rel="nofollow">Регистрация нового аккаунта</a><br />
+                            <a href="@Url.Action("ForgotPassword", "Account")" class="text-muted" rel="nofollow">Забыли пароль?</a>
                         </p>
                         @* Enable this once you have account confirmation enabled for password reset functionality
                             <p>
