https://github.com/EugeneKormin/Game-exe/issues/262

--- a/GE.WebUI/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GE.WebUI/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,18 @@
 ﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = "Подтверждение заяки восстановления пароля";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+@section head{
+    <meta name="robots" content="noindex" />
+}
+
+<div class="identity-page login">
+    <div class="wrapper">
+        <h2>@ViewBag.Title</h2>
+        <p>
+            <br />
+            На Ваш email было выслано письмо с инструкциями для восстановления пароля.
+        </p>
+    </div>
 </div>
-	
+
