--- a/GE.WebUI/Views/Account/ResetPassword.cshtml
+++ b/GE.WebUI/Views/Account/ResetPassword.cshtml
@@ -1,42 +1,51 @@
-﻿@model WebApplication1.Models.ResetPasswordViewModel
+﻿@model SxVMResetPassword
 @{
-    ViewBag.Title = "Reset password";
+    ViewBag.Title = "Востановление пароля";
 }
 
-<h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    <h4>Reset your password.</h4>
-    <hr />
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.Code)
-    <div class="form-group">
-        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Reset" />
-        </div>
-    </div>
+@section head{
+    <meta name="robots" content="noindex" />
 }
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+<div class="identity-page login">
+    <div class="wrapper">
+        <h2>@ViewBag.Title</h2>
+        <br />
+        @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "transparent", role = "form" }))
+        {
+            @Html.AntiForgeryToken()
+            @Html.HiddenFor(model => model.Code)
+           
+             <div class="form-group">
+                @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+                @Html.EditorFor(x=>x.Email, new { htmlAttributes=new { @class="form-control"} })
+                @Html.ValidationMessageFor(x=>x.Email)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Password, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Password)
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "control-label" })
+                @Html.EditorFor(x => x.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.ConfirmPassword)
+            </div>
+
+            <div class="form-group">
+                @Html.ValidationSummary()
+            </div>
+
+            <div class="form-group">
+                <input type="submit" class="btn btn-transparent white" value="Восстановить" />
+            </div>
+        }
+    </div>
+</div>
+
+@section scripts {
+    <script src="@Url.Action("Js", "StaticContent", new { name="jquery.validate", area=""})"></script>
+    <script src="@Url.Action("Js", "StaticContent", new { name = "jquery.validate.unobtrusive" })"></script>
 }
