--- a/GE.WebUI/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/GE.WebUI/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,17 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Успешное восстановление пароля";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+@section head{
+    <meta name="robots" content="noindex" />
+}
+
+<div class="identity-page login">
+    <div class="wrapper">
+        <h2>Поздравляем!</h2>
+        <br />
+        <p>Пароль успешно восстановлен.</p>
+        <p><a href="@Url.Action("Login","Account")" rel="nofollow">Войдите на сайт</a>, используя новые учетные данные.</p>
+    </div>
 </div>
+
